@@ -1,3 +1,5 @@
+######## 2014-9-28 ##########
+create unique index code on shop_weixin_vipcode(code);
 ######## 2014-9-16 ##########
 create unique index user_openid on shop_wexin_user_paper(user_openid,paper_id);
 ######## 2014-9-12 ##########
